array.island.Island.scala.error
Erreur de compilation :
Island:9: error: ')' expected but $XMLSTART$< found.
        else if (num(i) <L.head) {
                        ^Island:16: error: illegal start of simple expression
    }
    ^